<resources>
    <plurals name="msg_count_tag_images">
        <item quantity="one">%d image found.</item>
        <item quantity="other">%d images found.</item>
    </plurals>

    <string name="app_name" translatable="false">Docker Search</string>

    <string name="search_title">Search</string>
    <string name="search_hint">Search…</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="msg_cleared_search_history">Search history cleared</string>

    <string name="action_settings">Settings</string>
    <string name="action_contribute">Contribute !</string>
    <string name="action_rate_app">Rate the app</string>
    <string name="action_report_issue">Report an issue</string>
    <string name="action_check_latest_release">Check latest release</string>
    <string name="action_about">About</string>
    <string name="action_next">Next</string>

    <string name="msg_err_playstore_not_installed">Play Store not installed ?</string>
    <string name="Official">Official</string>
    <string name="msg_searching">Searching…</string>
    <string name="msg_no_network_connection">No Internet connection !</string>

    <string name="about">About</string>
    <string name="msg_about_version">Version : %s</string>
    <string name="msg_about_credits">This application works with :</string>
    <string name="msg_about_docker_website">Web site : https://www.docker.com</string>
    <string name="menu_warning_taglist">Warning</string>
    <string name="msg_error">Error : %s</string>
    <string name="share">Share</string>

    <string name="menu_open_in_chrome">Open in Chrome</string>
    <string name="menu_open_in_browser">Open in browser</string>

    <string name="choose_theme">Choose theme</string>
    <string name="choice_light_mode">Light</string>
    <string name="choice_dark_mode">Dark</string>
    <string name="choice_system_mode">Set by Battery Saver</string>
    <string name="title_activity_tag_details" translatable="false">TagDetailsActivity</string>

    <string name="lbl_header_digest">Digest</string>
    <string name="lbl_header_osarch" translatable="false">OS/Arch</string>
    <string name="snackbar_action_details">Details</string>
    <string name="tooltip_tags">Tags</string>
    <string name="tooltip_open_dockerhub_page">Open on Docker Hub</string>
    <string name="tooltip_share">Share</string>
    <string name="msg_delete_search_from_history">Delete this search from your history?</string>
    <string name="text_delete_search_from_history">Are you sure you want to delete the item &lt;b&gt;%1$s&lt;/b&gt; from your history?</string>
    <string name="details_title">Details</string>

</resources>
