<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/about_dialog"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textSize="16sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/about_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="20dip"
                android:text="@string/msg_about_credits"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Docker Logo"
                android:src="@drawable/docker_logo_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="20dip"
                android:text="@string/msg_about_docker_website"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="Version : "
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
